// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component Title renders 1`] = `
<div>
  <h1
    class="gds-typography ellipsis align-edit"
    title="PREFIX"
  >
    PREFIX
  </h1>
  <span
    class="title-edit-hidden"
  >
    TITLE
  </span>
  <input
    autocomplete="off"
    class="title-edit"
    placeholder="PLACEHOLDED"
    style="display: flex; margin: auto;"
    tabindex="0"
    type="text"
    value="TITLE"
  />
  <div>
    TOOLTIP
  </div>
  <h1
    class="gds-typography ellipsis align-edit"
  >
    - 
    ENTITYID
  </h1>
  <h1
    class="gds-typography ellipsis align-edit"
    title="SUFFIX"
  >
    SUFFIX
  </h1>
</div>
`;

exports[`Title Component Title renders and blurs on enter 1`] = `
<div>
  <span
    class="title-edit-hidden"
  >
    ABCDE
  </span>
  <input
    autocomplete="off"
    class="title-edit"
    data-testid="DATA-TEST-ID"
    style="display: flex; margin: auto;"
    tabindex="0"
    type="text"
    value="ABCDE"
  />
  <div>
    Rename
  </div>
</div>
`;

exports[`Title Component Title renders and blurs on tab 1`] = `
<div>
  <span
    class="title-edit-hidden"
  >
    ABCDE
  </span>
  <input
    autocomplete="off"
    class="title-edit"
    data-testid="DATA-TEST-ID"
    style="display: flex; margin: auto;"
    tabindex="0"
    type="text"
    value="ABCDE"
  />
  <div>
    Rename
  </div>
</div>
`;

exports[`Title Component Title renders and handles changes 1`] = `
<div>
  <span
    class="title-edit-hidden"
  >
    ABCDE
  </span>
  <input
    autocomplete="off"
    class="title-edit"
    data-testid="DATA-TEST-ID"
    style="display: flex; margin: auto;"
    tabindex="0"
    type="text"
    value="ABCDE"
  />
  <div>
    Rename
  </div>
</div>
`;

exports[`Title Component Title renders not editable 1`] = `
<div>
  <span
    class="title-edit-hidden"
  >
    TITLE
  </span>
  <input
    autocomplete="off"
    class="title-edit"
    data-testid="DATA-TEST-ID"
    readonly=""
    style="display: flex; margin: auto;"
    tabindex="-1"
    type="text"
    value="TITLE"
  />
</div>
`;

exports[`Title Component Title renders restores title when too short 1`] = `
<div>
  <span
    class="title-edit-hidden"
  >
    TITLE
  </span>
  <input
    autocomplete="off"
    class="title-edit"
    data-testid="DATA-TEST-ID"
    style="display: flex; margin: auto;"
    tabindex="0"
    type="text"
    value="TITLE"
  />
  <div>
    Rename
  </div>
</div>
`;
